# Genes2Genes

./: .buildinfo  LICENSE  README.md  environment.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: G2Gtutorial.doctree  index.doctree
.github/workflows/: documentation.yml
_sources/source/: G2Gtutorial.rst.txt
doc/: Makefile  conf.py  index.rst
doc/.ipynb_checkpoints/: Makefile-checkpoint
doc/css/: alabaster.css
doc/notebooks/: G2G_Tutorial.ipynb
doc/source/: conf.py  index.rst
genes2genes/: AlignmentDistMan.py  BatchAnalyser.py  ClusterUtils.py  MVG.py  Main.py  MyFunctions.py  OrgAlign.py  PathwayAnalyser.py  PathwayAnalyserV2.py  SimulationExperimentAnalyser.py  TimeSeriesPreprocessor.py  VisualUtils.py  __init__.py
genes2genes/.ipynb_checkpoints/: AlignmentDistMan-checkpoint.py  ClusterUtils-checkpoint.py  Main-checkpoint.py  MyFunctions-checkpoint.py  OrgAlign-checkpoint.py  TimeSeriesPreprocessor-checkpoint.py  Utils-checkpoint.py  VisualUtils-checkpoint.py  __init__-checkpoint.py
notebooks/: G2G_Tutorial.ipynb  OrgAlignTutorialNotebook_25102022.ipynb  Supplementary_notebook2.ipynb  TrajectorySimulatorUsingGPs.ipynb  Tutorial.ipynb  run_match_accuracy.py  simulations.ipynb
notebooks/.ipynb_checkpoints/: OrgAlignTutorialNotebook_25102022-checkpoint.ipynb  Supplementary_notebook1-checkpoint.ipynb  Supplementary_notebook2-checkpoint.ipynb  Tutorial-checkpoint.ipynb
notebooks/data/: adata_lps_local.h5ad  adata_pam_local.h5ad
source/: AlignmentDistMan.py  ClusterUtils.py  G2Gtutorial.html  Main.py  MyFunctions.py  OrgAlign.py  PathwayAnalyser.py  PathwayAnalyserV2.py  TimeSeriesPreprocessor.py  VisualUtils.py  index.html
(+7 files in other folders)
